--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -57,7 +57,7 @@ const rightPages = visiblePages.slice(half);
       </div>
     </header>
 
-    <main class="container">
+    <main>
       <slot />
     </main>
   </body>
